fixed z-index for toolbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,10 @@
   z-index: 2;
 }
 
+.nav-toolbar {
+  z-index: 2;
+}
+
 h1.nav-app-name {
   margin-left: 8px;
 }
